--- a/Lesson_6/index.html
+++ b/Lesson_6/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <ul class="list">
+    <!-- <ul class="list">
         <li class="item" data-id="1">
             <h1>apple</h1><button>buy</button>
         </li>
@@ -25,7 +25,20 @@
         </li>
     </ul>
 
-    <input type="email">
+    <input type="email"> -->
+    <!-- <ul class="list"></ul> -->
+    <!-- <h1 class="item">Hello world</h1>
+    <button class="hello">Click to change</button>
+    <input type="text" class="input">
+  
+    <a href="./test.html"  class="test" > next page</a> -->
+    <!-- <form action="submit" class="form">
+        <input type="text" class="input" name="email">
+        <input type="text" class="input" name="password">
+        <button type="submit">Submit</button>
+    </form> -->
+    <!-- <button class="add"> add</button> -->
+    <ul class="list"></ul>
     <script src="./script.js"></script>
 </body>
 
