--- a/Lesson_9/index.html
+++ b/Lesson_9/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <!-- <link rel="stylesheet" href="./style.css" /> -->
     <title>Document</title>
   </head>
   <body>
@@ -34,12 +34,15 @@
       <div class="clock-center"></div>
     </div> -->
 
-<form action="submit">
+<!-- <form action="submit">
     <input type="text" name="email">
     <input type="text" name="message">
-</form>
+</form> -->
 
-    <button class="interval">click</button>
+    <!-- <button class="interval">click</button> -->
+
+
+    <div class="response"></div>
 <script src="./script.js"></script>
   </body>
 </html>
